27//06 add none border PDF on print(saveRCPDF) morning

--- a/src/app/table-list/table-list.component.css
+++ b/src/app/table-list/table-list.component.css
@@ -140,8 +140,11 @@ border-radius: 5px;
   border-bottom-right-radius: 5px;
 }
 .headerText{
-display: flex;
-border-bottom: 1px solid #c1c1c1;
+  height: 34px;
+  padding: 0 1px 0 6px;
+  display: flex;
+  align-items: center;
+  border-bottom: 1px solid #c1c1c1;
 }
 .headerText button:first-child {
   display: flex;
@@ -623,12 +626,12 @@ right: 25px;
 :host ::ng-deep .angular-editor-textarea {
   border: none !important;
   border-bottom-left-radius: 5px !important;
-  border-top-right-radius:5px !important ;
+  border-bottom-right-radius:5px !important ;
   padding: 10px !important;
   overflow: auto !important;
   margin-top: 5px !important;
   resize: none !important;
-  height: 103.7mm !important;
+  height: 100.9mm !important;
   top: -5px !important;
 }
 :host ::ng-deep .custom-confirm-button{
