--- a/src/app/table-list/table-list.component.html
+++ b/src/app/table-list/table-list.component.html
@@ -114,7 +114,7 @@
 
                   <div class="row">
                     <div class="col-sm">
-                      <h5 class="modal-title" id="addItemModalLabel" style="color: white; font-family: 'Sarabun', sans-serif !important;">เพิ่มรายการ</h5>
+                      <h5 class="modal-title" id="addItemModalLabel" style="color: white; font-family: 'Sarabun', sans-serif !important; font-size: 18px;">เพิ่มรายการ</h5>
                     </div>
                     <div class="col-sm">
                       <button type="button" class="close" data-dismiss="modal" aria-label="Close">
@@ -369,132 +369,6 @@
           </div>
           <!--land Insert end here-->
           <!-- รายละเอียด-->
-          <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
-            aria-hidden="true">
-            <div class="modal-dialog modal-lg" role="document">
-              <div class="modal-content" [ngStyle]="{ width: '230mm', height: '327mm' }">
-                <div class="modal-header card-header card-header-danger" style="background: rgb(255, 209, 0)">
-                  <h5 class="modal-title" id="myModalLabel" style="color: white; font-family: 'Sarabun', sans-serif !important; ">รายละเอียด</h5>
-                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                  </button>
-                </div>
-                <div id="myDetail" class="modal-body-detail" [ngStyle]="{ width: '210mm', height: '297mm' }">
-                  <!-- เนื้อหาของป๊อปอัพ -->
-                  <form action method="get">
-                    <div class="mainCenter-panel "> <!---->
-                      <div class="header-topic">
-
-                        <label style="font-size: 16px; font-weight: bold;">เอกสารตรวจสอบ</label>
-                        <p>{{ detailItems?.record_topic }}</p>
-
-                      </div>
-
-                      <div class="detail-content">
-                        <div class="date-flex">
-                          <div class="form-group start-date">
-                            <label>วันที่เริ่มการตรวจสอบ:</label>
-                            <p>{{ detailItems?.record_star_date | thaidate: 'medium' }}</p>
-                          </div>
-                          <div class="form-group end-date">
-                            <label>วันที่เสร็จสิ้นการตรวจสอบ:</label>
-                            <p>{{ detailItems?.record_end_date | thaidate: 'medium' }}</p>
-                          </div>
-                        </div>
-
-
-                        <div class="form-group">
-                          <label>รายละเอียด:</label>
-                          <p>{{ detailItems?.record_detail }}</p>
-                        </div>
-                        <div class="form-group">
-                          <label>สถานที่:</label>
-                          <p>{{ detailItems?.record_place }}</p>
-                        </div>
-                      </div>
-                      <div class="main-detail">
-                        <table>
-                          <thead>
-                            <tr>
-                              <th>ครั้งที่</th>
-                              <th>เนื้อหาการตรวจสอบ</th>
-                            </tr>
-
-                          </thead>
-                          <tbody>
-                            <tr>
-                              <td style="vertical-align: text-top;">{{detailItems?.record_id}}/{{detailItems?.record_star_date | thaidate :'year'}}</td>
-                              <td [innerHTML]="getSafeHtml(detailItems?.record_content)"></td>
-                            </tr>
-                          </tbody>
-                        </table>
-                      </div>
-
-                      <div class="sign-content">
-                        <div class="form-group">
-                          <label>รายชื่อผู้รับผิดชอบ:</label>
-                          <div *ngFor="let person of viewData; let i = index">
-                            <div class="UploadContentBox">
-                              <!-- <div>
-                                <i class="fa fa-upload" style="font-size:24px; cursor: pointer;"
-                                  (click)="uploadImage(i)" *ngIf="!isLoading[i] && !uploadedImages[i]"></i>
-                                <input type="file" id="image-upload-{{i}}" (change)="onFileChange($event, i)"
-                                  accept="image/" style="display: none;">
-                                <img [src]="uploadedImages[i]" alt="Uploaded Image" *ngIf="uploadedImages[i]"
-                                  style="max-width: 100px; max-height: 100px; display: block; margin-top: 10px;">
-                              </div> -->
-                              <div class="openSignModal" (click)="openSignModal(i)">
-                                <a>คลิกเพื่อเซ็น</a>
-
-                              </div>
-                              <!-- Sign modal -->
-                              <div class="Writte-sign" #writteSignElement id="SignModal-{{i}}"
-                                *ngIf="isSignModalVisible[i]">
-                                <canvas id="writteSignCanvas-{{i}}" class="full-page-signWritte">Error someting with
-                                  canvas</canvas>
-                                <!-- <button (click)="refreshSignCanvas(i)"  style="border: none; background: none;">
-                                    <i data-toggle="tooltip" title="ลบ" data-placement="top"
-                                      class="fa fa-refresh"></i></button> -->
-                              </div>
-
-
-                              </div>
-
-                            <a>( {{ person.view_rank }} &nbsp; &nbsp; {{ person.view_full_name }} )</a>
-                          </div>
-                        </div>
-                      </div>
-
-
-                    </div>
-                  </form>
-                  <!-- <div class="right-panel">
-                    <form action="">
-                      <div class="right-panelOnTop">
-                  
-                      </div>
-
-                     
-
-
-                    </form>
-                  </div> -->
-                </div>
-                <div class="modal-footer">
-                  <!-- <button type="button" class="btn btn-success pull-center" (click)="printPDF()">
-                    <i class="fa fa-download"></i>&nbsp; ดาว์โหลด
-                  </button> -->
-
-                  <button type="button" class="btn btn-success pull-center" (click)="printPDF()">
-                    <i class="fa fa-download"></i>&nbsp; ดาว์โหลด
-                  </button>
-                  <button type="button" class="btn btn-add" (click)="saveRCPDF()">
-                    <i class="fa fa-save"></i>&nbsp; บันทึก
-                  </button>
-                </div>
-              </div>
-            </div>
-          </div>
 
 
           <!--[formGroup]="Form" (ngSubmit)="addPersonCommit(Form.value)" modal อันที่เป็นของ add person หน้าเล็กๆๆ ถูกลบออกนะ-->
@@ -506,7 +380,7 @@
             <div class="modal-dialog modal-lg" role="document">
               <div class="modal-content" [ngStyle]="{width: '230mm',height: '180mm'  }">
                 <div class="modal-header card-header card-header-danger" style="background: rgb(255, 209, 0)">
-                  <h5 style="color: white; font-family: 'Sarabun', sans-serif !important;" class="modal-title" id="myModalLabel">จดบันทึก</h5>
+                  <h5 style="color: white; font-family: 'Sarabun', sans-serif !important; font-size: 18px;" class="modal-title" id="myModalLabel">จดบันทึก</h5>
                   <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                   </button>
@@ -533,12 +407,8 @@
                       <div *ngIf="isTyproActive" class="full-page-textarea-container">
                         <div class="typroTextBox">
                           <div class="headerText">
-                            <div aria-label="Preview" style="padding-left: 6px; align-items: center;">การพิมพ์ข้อความ</div>
+                            <div aria-label="Preview">การพิมพ์ข้อความ</div>
                             
-                            
-
-
-
                           </div>
                           <angular-editor [placeholder]="'พิมพ์ข้อความที่นี้...'" [config]="editorConfig" [(ngModel)]="typroText "></angular-editor>
 
