--- a/src/app/view/table-detail/table-detail.component.html
+++ b/src/app/view/table-detail/table-detail.component.html
@@ -132,7 +132,7 @@
             <div  id="myDetail" class="modal-body-detail" [ngStyle]="{'display': (testFile ||!remainingContent) ? 'none' : 'block', width: '210mm' }">
             
                 <form action method="get">
-                    <div #signContentContainer class="mainCenter-panel ">
+                    <div #mainCenterPanel class="mainCenter-panel ">
                        
     
                         <div class="main-detail">
