--- a/src/app/view/table-main/table-main.component.css
+++ b/src/app/view/table-main/table-main.component.css
@@ -21,13 +21,28 @@
     font-family: 'Sarabun', sans-serif; 
   }
   .card-body tbody{
-    font-size: 16px;
+    font-size: 14px;
   }
   
-  .MainTableDetail{
-    height: 100%;
-
+  .searchLocation{
+    color: #ff9e2c;
+    border: 0px solid transparent;
+    background-color: #fff3e4;
+    border-radius: 32px;
+    padding: 4px 8px;
+    font-size: 12px;
+    font-weight: 300;
+    line-height: 1.333em;
+    display: inline-block;
+    align-items: center;
+    font-size: 14px;
+    font-family:  'Sarabun', sans-serif; 
+   
   }
+  /* .searchLocation:hover{
+    background: #dddfff;
+    z-index: 30;
+  } */
   
   .modal-body-detail{ 
     position: relative;
@@ -38,76 +53,53 @@
      left: 50%;
      transform: translateX(-50%);
       width: 100%;
-      height: 297mm;/*297mm*/
+      height: 297mm;
       border: 0.2px solid #000;
       font-family: "Sarabun", sans-serif;
-      
       max-height:297mm ;
       /* overflow: auto;   */
   }
-    /*page Break */
-  /* .page {
-    width: 210mm;
-    height: 297mm;
-    position: relative;
-    display: inline-block;
-    
-  } */
   
-  .page-break {
-    page-break-before: always;
-  }
-
-  /*end page break*/
+  .modal-content{
   
-  .Detail-content{
-    position: relative;
-    /* max-height: 1235.9px; */
-    top: 50px;
-    bottom: 50px;
-    height: auto;
-    margin: 50px 0 50px 0;
+    max-height: 1235.9px;
     left: 50%;
     transform: translateX(-50%);
     justify-content: center;
     font-family: "Sarabun", sans-serif;
-    background: white;
     
-  }
-
-  .main-detail {
-    position: relative;
-    border-collapse: collapse; /* เพื่อทำให้เส้นขอบรวมกัน */
-    width:605px;
-   
-    padding: 10px 0 0 0; /* เพิ่มระยะห่างบนและล่าง */
-    font-family:  'Sarabun', sans-serif; /* ใช้ฟอนต์ราชการ */
   }
   .card-header{
     position: relative;
     background-color: rgb(255, 209, 0);
-    width: 836.3px;
-    border-radius: 3px;
-    top: -20px;
-    margin-top: -20px;
-    padding: 15px;
-    left: 50%;
-    transform: translate(-50%);
-    justify-content: center;
-    box-shadow: 0 4px 20px 0px rgba(0, 0, 0, 0.14), 0 7px 10px -5px rgba(244, 67, 54, 0.4);
   }
-
-  
+  .search-table{
+    position: relative;
+    align-items:center ;
+  }
+  .icon-search{
+    background-color: #fff;
+    width: 35px;
+    height: 35px;
+    border-radius: 20.5px;
+    align-items: center;
+    border: none;
+  }
+  .icon-search:hover{
+    box-shadow:0 10px 10px 0 #b5b3b3;
+  }
   
   
   label{
-    color: black;
-  }
-  p{
+  
     color: black;
   }
   
-
+  
+  .btn-just-icon.active {
+    background-color: #55b559; /* สีพื้นหลังเมื่อปุ่ม active */
+    color: white; /* สีตัวอักษรเมื่อปุ่ม active */
+  }
   
   .form-control.mt-3 {
     position: relative;
@@ -148,8 +140,11 @@
     border-bottom-right-radius: 5px;
   }
   .headerText{
-  display: flex;
-  border-bottom: 1px solid #c1c1c1;
+    height: 34px;
+    padding: 0 1px 0 6px;
+    display: flex;
+    align-items: center;
+    border-bottom: 1px solid #c1c1c1;
   }
   .headerText button:first-child {
     display: flex;
@@ -169,7 +164,15 @@
     width: 30px;
     height: 25px;
   }
-  
+  /* .headerText button:first-child:hover {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #e2e2e2;
+  border-radius: 5px;
+  height: 30px;
+  width: 65px;
+  } */
   .headerText button{
     display: flex;
     align-items: center;
@@ -207,6 +210,7 @@
   }
   
   .full-page-canvas {
+    cursor: url('/assets/img/pen-cursor.png'),auto;
   width: 100%;
   height: 460.3px;
   /* border: 1px solid black;  */
@@ -235,12 +239,11 @@
   opacity: 0.9;
   }
   .Writte-sign{
-  position: relative; /*[ng-reflect-writteSignElement]*/
-  left: 53px;
+  position: absolute; /*[ng-reflect-writteSignElement]*/
+  left: 50px;
   display: flex; /* Hidden by default */
-  align-items: center;
   top: 0;
-  width: 35%;
+  width: 100%;
   height: 20mm;
   background-color: rgb(255, 254, 254); /* Semi-transparent background */
   z-index: 1000; /* Higher than other content */
@@ -250,7 +253,7 @@
   
   
   .full-page-signWritte{
-  cursor: url('/assets/img/pen-cursor.png') -1 15,auto;
+  
   width: 30mm;
   height: 20mm;
   border-radius: 5px;
@@ -299,8 +302,7 @@
     background: #fff;
     padding: 96px;
     height: 100%;
-    border:none;
-    /* max-height: 297mm; */
+    max-height: 297mm;
   }
   .header-topic{
   position: relative;
@@ -328,23 +330,34 @@
     top: 0;
     left: 0;
   }
-
+  /* .right-panelOnBottom{
+  position: relative;
+  bottom: 0;
+  right: 25px;
+  } */
+  /* .right-panel img {
+    width: 30mm;   
+    height: 20mm;
+    border: 1px solid #ddd;
+    margin-left: 50px;
+  } */
+  /* .form-group {
+    margin-bottom: 10px;
+  } */
+  
   .detail-content{
     position: relative;
     margin-top: 60px;
-
   }  
   .detail-content .form-group label {
       display: inline-block;
       font-weight: bold;
-      font-size: 16px;
     }
     
   .detail-content .form-group p {
       display: inline-block;
       margin: 0;
       padding-left: 10px;
-      font-size: 16px;
     }
   
   .date-flex{
@@ -352,14 +365,26 @@
       justify-content: space-between;
     }
     /*location td*/
- 
- 
+    /* .table-responsive table td:nth-child(4) {
+      max-width: 220px;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+    } */
+  
+  
+  .main-detail {
+      position: relative;
+      border-collapse: collapse; /* เพื่อทำให้เส้นขอบรวมกัน */
+      width: 600px;
+      overflow: auto;
+      padding: 20px; /* เพิ่มระยะห่างบนและล่าง */
+      font-family:  'Sarabun', sans-serif; /* ใช้ฟอนต์ราชการ */
+    }
   .main-detail table{
       max-width: 600px;
       table-layout: fixed;
       overflow: auto;
-      border-collapse: collapse;
-      border: 0.1px solid black;
     }
   .main-detail th, .main-detail td {
       max-width: 539.29px;
@@ -371,14 +396,13 @@
     }
     
   .main-detail th:first-child, .main-detail td:first-child {
-    text-align: center;
-      width: 12%;
+      width: 10%;
     }
     
   .main-detail th:last-child, .main-detail td:last-child {
-      width: 88%;
+      width: 90%;
     }
-  .main-detail th {   
+  .main-detail th {
       background-color: #f2f2f2; /* พื้นหลังสีเทาอ่อนสำหรับหัวตาราง */
     }
     
@@ -388,11 +412,8 @@
   
   .sign-content{
       position: relative;
-      /* padding-left: 360px; */
-      display: flex;
-      justify-content: flex-end;
-      font-size: 16px;
-      font-family: 'Sarabun',sans-serif;
+      padding-left: 380px;
+      
       text-align: center;
       margin-top: 20px;
     }
@@ -400,7 +421,6 @@
       position: relative;
       display: flex;
       align-items: center;
-     
       justify-content: center;
     }
   
@@ -411,7 +431,93 @@
       margin-left: 58px;
      
     }
-
+  .position-relative {
+      position: relative;
+    }
+  .form-group input{
+      border-radius: 5px;
+    }
+  .border-error {
+      position: relative;
+      bottom:0px;  /* ให้ข้อความอยู่ใต้ input */
+      left: 0px;
+      margin: 2px;
+      background-color: transparent;
+      color: red;
+      font-size: 0.875em;
+      text-align: left;
+      pointer-events: none;
+      border-radius: 5px;
+     z-index: 1;
+    
+    }
+  .box-validate{
+      border: 1px solid red;
+      border-radius: 5px;
+    }
+  .box-validate + .text-validate .border-error {
+      display: block;
+    }
+  .border-errorInDex{
+      position: relative;
+      bottom:0px;  /* ให้ข้อความอยู่ใต้ input */
+      left: 0px;
+      margin: 2px;
+      width: 600px;
+      background-color: transparent;
+      color: red;
+      font-size: 0.875em;
+      text-align: left;
+      pointer-events: none;
+      border-radius: 5px;
+     z-index: 1;
+  
+    }
+  .border-errorPersonFullname{
+      position: relative;
+      bottom:0px;  /* ให้ข้อความอยู่ใต้ input */
+      left: 0px;
+      margin: 2px;
+      background-color: transparent;
+      color: red;
+      font-size: 0.875em;
+      text-align: left;
+      pointer-events: none;
+      border-radius: 5px;
+    }
+  .border-errorPersonRank{
+      position: relative;
+      bottom:0px;  /* ให้ข้อความอยู่ใต้ input */
+      left: 0px;
+      margin: 2px;
+      width: auto;
+      background-color: transparent;
+      color: red;
+      font-size: 0.875em;
+      text-align: left;
+      pointer-events: none;
+      border-radius: 5px;
+    }
+  
+  .border-errorLocation {
+      position: relative;
+      bottom:0px;  /* ให้ข้อความอยู่ใต้ input */
+      left: 0px;
+      margin: 2px;
+      /* background-color: white; */
+      color: red;
+      font-size: 0.875em;
+      text-align: left;
+      pointer-events: none;
+      border-radius: 5px;
+     z-index: 1;
+    
+    }
+  .text-validate{
+     
+    color: red;
+  }
+  
   
   :host ::ng-deep .close{
     float: right;
@@ -424,15 +530,16 @@
   }
     :host ::ng-deep .btn-add{
       color: #fff;
-      background-color: rgb(24,144,255) ;/*#000dc2ef rgb(24,144,255)  #24a0ed */
-      border-color: #00087c9f;
+      background-color: #24a0ed;/*#000dc2ef  */
+      border-color: #24a0ed85;;
       /* box-shadow: 0 2px 2px 0 #0d6efd, 0 3px 1px -2px #0d6efd, 0 1px 5px 0 #0d6efd; */
+      font-family: 'Sarabun', sans-serif;
   
     }
     :host ::ng-deep .btn-add:hover{
-      background-color: rgb(24,144,255); 
-      border-color: #24a0edb6;
-      box-shadow: 0 14px 14px -12px #24a0ed51, 0 4px 14px 0px rgba(0, 0, 0, 0.12), 0 8px 10px -5px #24a0ed51;
+      background-color: #24a0ed; 
+      border-color: #00087c9f;
+      /* box-shadow: 0 14px 14px -12px #24a0ed51, 0 4px 14px 0px rgba(0, 0, 0, 0.12), 0 8px 10px -5px #24a0ed51; */
     }
    
    
@@ -508,43 +615,34 @@
     color: #000000;
     font-weight: 400;
   }
-
-  /*upload file botton */
-  :host ::ng-deep .uploadFilePDF{
-    position: relative;
-    margin: 10px 0 60px 0;
-    border-radius: 5px;
-    width: 360px;
-
+  
+  :host ::ng-deep .angular-editor-toolbar{
+  
+    background-color: #f5f5f5;
+    padding: 3.4px !important;
+    bottom: 2px !important;
+    font-size: 14px !important;
   }
-  :host ::ng-deep.flieUpload{
-    position: relative;
-    
-    justify-content: flex-end;
-    width: 360px;
-
-    border-radius: 5px;
+  
+  :host ::ng-deep .angular-editor-textarea {
+    border: none !important;
+    border-bottom-left-radius: 5px !important;
+    border-bottom-right-radius:5px !important ;
+    padding: 10px !important;
+    overflow: auto !important;
+    margin-top: 5px !important;
+    resize: none !important;
+    height: 100.9mm !important;
+    top: -5px !important;
   }
-  input{
-    margin: 10px 0 0 40px ;
-    border: 1px solid rgb(0, 0, 0);
-    border-radius: 5px;
+  :host ::ng-deep .custom-confirm-button{
+    background-color: #24a0ed !important; 
+    color: white !important;
   }
-  ::-webkit-file-upload-button{
-
-    border: none;
-    background-color: #24a0ed;
+  :host ::ng-deep div.swal2-container button.swal2-styled.swal2-confirm {
+    background-color: #24a0ed !important; 
     color: white;
-    border-radius: 5px 0 0 5px ;
   }
-็
-  :host ::ng-deep .pdfViewer .page{
-    border: 1px solid black !important;
-    /* margin: 1px auto -8px; */
-
-  }
-/*end botton upload file PDF*/
-
   
   @media print {
     #myDetail{
