--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,3 +1,17 @@
+<footer class="footer ">
+    <div class="container-fluid">
+        <div class="copyright pull-center">
+            &copy;
+            {{test | date: 'yyyy'}}, made with love by
+            <a href="https://www.creative-tim.com" target="_blank">Weerapat,&nbsp;</a>
+            <a href="https://www.creative-tim.com" target="_blank">Sukdituch,&nbsp;</a>
+            <a href="https://www.creative-tim.com" target="_blank">Suphawich</a>
+             for learning skill.
+        </div>
+    </div>
+</footer>
+
+
 <!-- <footer class="footer ">
     <div class="container-fluid">
         <nav class="pull-left">
