--- a/src/app/view/table-main/table-main.component.css
+++ b/src/app/view/table-main/table-main.component.css
@@ -205,12 +205,11 @@
   resize: none;
   border: 1px solid black;
   border-radius: 5px;
-  
+  cursor: url('/assets/img/pen-cursor.png')-1 15,auto;
   
   }
   
   .full-page-canvas {
-    cursor: url('/assets/img/pen-cursor.png'),auto;
   width: 100%;
   height: 460.3px;
   /* border: 1px solid black;  */
