--- a/src/app/layouts/auth-layout/register/register.component.html
+++ b/src/app/layouts/auth-layout/register/register.component.html
@@ -2,13 +2,13 @@
     <h2>สมัครสมาชิก</h2>
     <form [formGroup]="regisForm" (ngSubmit)="onSubmit(regisForm.va)">
       <div class="form-group">
-        <label for="firstName" style="font-size: 16px;">ชื่อ</label>
-        <input type="text" id="firstName" [(ngModel)]="firstName" name="firstName" required placeholder="กรอกชื่อของคุณ"  
+        <label for="firstname" style="font-size: 16px;">ชื่อ</label>
+        <input type="text" id="firstname" [(ngModel)]="firstname" name="firstname" required placeholder="กรอกชื่อของคุณ"  
         style="font-size: 14px; font-family: 'Sarabun', sans-serif;">
       </div>
       <div class="form-group">
-        <label for="lastName" style="font-size: 16px;">นามสกุล</label>
-        <input type="text" id="lastName" [(ngModel)]="lastName" name="lastName" required placeholder="กรอกนามสกุลของคุณ"  
+        <label for="lastname" style="font-size: 16px;">นามสกุล</label>
+        <input type="text" id="lastname" [(ngModel)]="lastname" name="lastname" required placeholder="กรอกนามสกุลของคุณ"  
         style="font-size: 14px; font-family: 'Sarabun', sans-serif;">
       </div>
       <div class="form-group">
@@ -22,8 +22,8 @@
         style="font-size: 14px; font-family: 'Sarabun', sans-serif;">
       </div>
       <div class="form-group">
-        <label for="confirmPassword" style="font-size: 16px;">ยืนยัน รหัสผ่าน</label>
-        <input type="password" id="confirmPassword" [(ngModel)]="confirmPassword" name="confirmPassword" required placeholder="กรอกรหัสผ่านของคุณ"  
+        <label for="confirmpassword" style="font-size: 16px;">ยืนยัน รหัสผ่าน</label>
+        <input type="password" id="confirmpassword" [(ngModel)]="confirmpassword" name="confirmpassword" required placeholder="กรอกรหัสผ่านของคุณ"  
         style="font-size: 14px; font-family: 'Sarabun', sans-serif;">
       </div>
       <div class="form-group">
