--- a/src/app/view/thaicounty/thaicounty.component.html
+++ b/src/app/view/thaicounty/thaicounty.component.html
@@ -3,11 +3,13 @@
     การลงรายเซ็นต์
   </div>
   <div class="card-body">
-    <table>
+    <table width="100%" datatable [dtOptions]="dtOptions" class="table table-striped table-bordered" *ngIf="!loading">
       <thead>
         <tr>
           <th>จังหวัด</th>
-          <th>จำนวน (ครั้ง)</th>
+          <th>จำนวนที่เซ็นเเล้ว(ครั้ง)</th>
+          <th>จำนวนที่ยังไม่ได้เซ็น(ครั้ง)</th>
+            
           <th>เปอร์เซ็นต์</th>
         </tr>
       </thead>
@@ -15,6 +17,7 @@
         <tr *ngFor="let province of provinces">
           <td>{{ province.name }}</td>
           <td>{{ province.count }}</td>
+          <td>{{ province.percentage }}%</td>
           <td>{{ province.percentage }}%</td>
         </tr>
       </tbody>
