03//07 coment test button

--- a/src/app/view/table-detail/table-detail.component.html
+++ b/src/app/view/table-detail/table-detail.component.html
@@ -101,7 +101,7 @@
                                 </tbody>
                             </table>
                         </div>
-                        <button class="btn btn-success" (click)="openSignModalx(1)">test click page1</button>
+                        <!-- <button class="btn btn-success" (click)="openSignModalx(1)">test click page1</button> -->
                         <div *ngIf="!remainingContent" class="sign-content"
                             [ngStyle]="{'display':contentParts ? 'flex' : 'none'}">
                             <!-- [ngStyle]="{'display':!remainingContent ? 'flex' : 'none'}"-->
