--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -4,7 +4,7 @@
             &copy;
             {{test | date: 'yyyy'}}, made with love by
             <a href="https://www.creative-tim.com" target="_blank">Weerapat,&nbsp;</a>
-            <a href="https://www.creative-tim.com" target="_blank">Sukdituch,&nbsp;</a>
+            <a href="https://www.creative-tim.com" target="_blank">Sakdituch,&nbsp;</a>
             <a href="https://www.creative-tim.com" target="_blank">Suphawich</a>
              for learning skill.
         </div>
