03//07 after merge morning

--- a/src/app/view/profile/profile.component.html
+++ b/src/app/view/profile/profile.component.html
@@ -4,33 +4,33 @@
             <div class="col-md-8">
                 <div class="card">
                     <div class="card-header card-header-danger">
-                        <h4 class="card-title">Edit Profile</h4>
+                        <h4 class="card-title">การจัดการผู้ใช้งาน</h4>
                     </div>
                     <div class="card-body">
                         <form>
                             <div class="row">
                                 <div class="col-md-4">
                                     <mat-form-field class="example-full-width">
-                                      <input matInput placeholder="Email address" type="email">
+                                      <input matInput placeholder="อีเมล" type="email">
                                     </mat-form-field>
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="col-md-6">
                                   <mat-form-field class="example-full-width">
-                                    <input matInput placeholder="Fist Name" type="text">
+                                    <input matInput placeholder="ชื่อ" type="text">
                                   </mat-form-field>
                                 </div>
                                 <div class="col-md-6">
                                   <mat-form-field class="example-full-width">
-                                    <input matInput placeholder="Last Name" type="text">
+                                    <input matInput placeholder="นามสกุล" type="text">
                                   </mat-form-field>
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="col-md-12">
                                   <mat-form-field class="example-full-width">
-                                    <input matInput placeholder="Adress" type="text">
+                                    <input matInput placeholder="ที่อยู่" type="text">
                                   </mat-form-field>
                                 </div>
                             </div>
@@ -42,12 +42,12 @@
                                 </div>
                                 <div class="col-md-4">
                                   <mat-form-field class="example-full-width">
-                                    <input matInput placeholder="Country" type="text">
+                                    <input matInput placeholder="ประเทศ" type="text">
                                   </mat-form-field>
                                 </div>
                                 <div class="col-md-4">
                                   <mat-form-field class="example-full-width">
-                                    <input matInput placeholder="Postal Code" type="text">
+                                    <input matInput placeholder="รหัสไปรษณีย์" type="text">
                                   </mat-form-field>
                                 </div>
                             </div>
