--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -9,7 +9,7 @@
             <span class="navbar-toggler-icon icon-bar"></span>
         </button>
         <div class="collapse navbar-collapse justify-content-end"></div>
-       <div class="nav-link" (click)="openprofile()"><i class="bi bi-person-circle" >&nbsp;เข้าสู่ระบบ</i></div>
+       <div class="nav-link" (click)="openprofile()"><i class="bi bi-person-circle" ></i></div>
     </div>
         
 </nav>
