--- a/src/app/view/table-detail/table-detail.component.css
+++ b/src/app/view/table-detail/table-detail.component.css
@@ -729,7 +729,62 @@ input{
 
 }
 /*end botton upload file PDF*/
+/* ส่วนที่สอง */
+.UploadContentBoxPerson {
+  /* สไตล์สำหรับ UploadContentBox ในส่วนที่สอง */
+  position: absolute;
+  display: flex;
+  align-items: center;
+  cursor: move; /* เพิ่มเพื่อให้ผู้ใช้รู้ว่าองค์ประกอบนี้สามารถลากได้ */
+  justify-content: center;
+}
 
+.openSignModalPerson {
+  position: absolute;
+  
+  display: flex;
+  width: 30mm;
+  height: 20mm;
+  border: 2px dashed orange;
+  background: repeating-linear-gradient(-45deg,  rgb(253, 216, 4) 4px, transparent,  transparent 10px );
+  border-radius: 5px;
+  border-style:dashed ;
+  opacity: 0.5;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+.openSignModalPerson:hover{
+  box-shadow: 0 14px 20px -12px rgb(253, 216, 4), 0 4px 15px 0px rgba(211, 211, 211, 0.12), 0 2px 5px -5px rgb(253, 216, 4);
+  opacity: 0.9;
+  }
+
+.Writte-signPerson {
+  /* สไตล์สำหรับ Writte-sign ในส่วนที่สอง */
+  position: absolute; /*[ng-reflect-writteSignElement]*/
+  left: -18px;
+  display: flex; /* Hidden by default */
+  align-items: center;
+  top: 0;
+  width: 35%;
+  height: 20mm;
+  background-color: rgb(255, 254, 254); /* Semi-transparent background */
+  z-index: 1000; /* Higher than other content */
+}
+
+.full-page-signWrittePerson {
+  /* สไตล์สำหรับ full-page-signWritte ในส่วนที่สอง */
+  position: absolute;
+  cursor: url('/assets/img/pen-cursor.png') -1 15,auto;
+  width: 30mm;
+  height: 20mm;
+  border-radius: 5px;
+  border: 1px solid black;
+  z-index: 1001;
+}
 
 @media print {
   #myDetail{
@@ -766,4 +821,37 @@ input{
     size: A4;
     margin: 20mm;
   }
+}
+/* ปุ่มปิด */
+.close-btn {
+  position: absolute;
+  top: 5px;
+  right: 5px;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  background-color: red;
+  color: white;
+  border: none;
+  text-align: center;
+  cursor: pointer;
+  font-size: 14px;
+  line-height: 20px;
+}
+
+/* ปุ่มขยับ */
+.drag-btn {
+  position: absolute;
+  bottom: -25px; /* ปรับตำแหน่งตามความต้องการ */
+  left: 5px;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  background-color: blue;
+  color: white;
+  border: none;
+  text-align: center;
+  cursor: pointer;
+  font-size: 14px;
+  line-height: 20px;
 }
