--- a/src/app/view/table-detail/table-detail.component.html
+++ b/src/app/view/table-detail/table-detail.component.html
@@ -25,22 +25,25 @@
         <div *ngIf="selectedFilePath">
 
             <pdf-viewer id="pdf-viewer" *ngIf="testFile" [src]="testFile" [render-text]="true" [original-size]="true"
-                [borders]="true" [show-borders]="true" style="width: 210mm; height: 297mm;">
+                [borders]="true" [show-borders]="true" style="width: 210mm; height: 297mm;" (click)="test()">
             </pdf-viewer>
             <img *ngIf="isFileImage" [src]="selectedFilePath" alt="Image"
                 style="display: block; align-items: center; max-width:  100%; max-height: 297mm;">
             <!-- Add signature boxes here -->
-            <div *ngFor="let box of boxes; let i = index" class="UploadContentBox"
-                [ngStyle]="{'top': box.top + 'px', 'left': box.left + 'px', 'position': 'absolute'}" draggable="true"
-                (dragstart)="onDragStart($event, i)" (dragend)="onDragEnd($event, i)">
-                <div class="openSignModal" (click)="openSignModal(i)">
+            <!-- <div *ngFor="let box of boxes; let i = index" class="UploadContentBoxPerson"
+                [ngStyle]="{'top': box.top + 'px', 'left': box.left + 'px', 'position': 'absolute'}"
+                draggable="true" (dragstart)="onDragStart($event, i)" (dragend)="onDragEnd($event, i)">
+                <div class="openSignModalPerson" (click)="openSignModal(i)">
                     <a>คลิกเพื่อเซ็น</a>
                 </div>
-                <div class="Writte-sign" *ngIf="isSignModalVisible[i]">
-                    <canvas id="writteSignCanvas-{{i}}" class="full-page-signWritte">Error something with
+                <div class="Writte-signPerson" *ngIf="isSignModalVisible[i]">
+                    <canvas id="writteSignCanvas-{{i}}" class="full-page-signWrittePerson">Error something with
                         canvas</canvas>
+                    <button type="button" class="close-btn" (click)="closeSignModal(i)">×</button>
+                    <button type="button" class="drag-btn" id="drag-btn-{{i}}" draggable="true" (dragstart)="onDragStart($event, i)" (dragend)="onDragEnd($event, i)">☰</button>
                 </div>
-            </div>
+
+            </div> -->
             <!-- End of signature boxes -->
         </div>
 
@@ -289,11 +292,11 @@
 
 
 
-    
-    
-       
+
+
+
     </div>
-  
+
 </div>
 
 
@@ -312,7 +315,3 @@
             </table>
         </div>
     </div> -->
-
-
-
-
