--- a/src/app/view/profile/profile.component.css
+++ b/src/app/view/profile/profile.component.css
@@ -2,7 +2,10 @@
 .main-content,
 .container-fluid {
   height: 100%;
+  font-family: 'Sarabun',sans-serif;
 }
+
+
 
 /* 2. Update .row to be centered */
 .row {
@@ -18,22 +21,28 @@
 }
 
 /* 4. Add a border to .card and padding to .card-header */
-.card {
+/* .card {
   border: 1px solid #000;
-}
+} */
+
 
 .card-header {
   padding: 20px;
+  background-color: rgb(255, 209, 0);
+
 }
 
-/* 5. Update .card-header-danger background color */
+
+/* 5. Update .card-header-danger background color  linear-gradient(60deg,  rgb(255, 209, 0), #fcffc2) */
 .card-header-danger {
-  background: linear-gradient(60deg, #b71c1c, #ff8a80);
+  background:rgb(255, 209, 0);
+  font-family: 'Sarabun',sans-serif;
 }
 
 /* 6. Increase the font size of .card-title and .card-category */
 .card-title {
-  font-size: 24px;
+  font-size: 18px;
+  font-family: 'Sarabun',sans-serif;
 }
 
 .card-category {
@@ -61,4 +70,23 @@
   border-color: #d32f2f;
   font-size: 18px;
   padding: 15px 30px;
+}
+:host ::ng-deep textarea{
+  height: 100px;
+}
+::placeholder{
+  font-family: 'Sarabun',sans-serif;
+}
+:host ::ng-deep .btn-add{
+  color: #fff;
+  background-color: #24a0ed;/*#000dc2ef  */
+  border-color: #24a0ed85;;
+  /* box-shadow: 0 2px 2px 0 #0d6efd, 0 3px 1px -2px #0d6efd, 0 1px 5px 0 #0d6efd; */
+  font-family: 'Sarabun', sans-serif;
+
+}
+:host ::ng-deep .btn-add:hover{
+  background-color: #24a0ed; 
+  border-color: #00087c9f;
+  /* box-shadow: 0 14px 14px -12px #24a0ed51, 0 4px 14px 0px rgba(0, 0, 0, 0.12), 0 8px 10px -5px #24a0ed51; */
 }
