--- a/src/app/view/profile/profile.component.html
+++ b/src/app/view/profile/profile.component.html
@@ -5,7 +5,7 @@
               <div class="card">
                   <div class="card-header card-header-danger">
                       <h4 class="card-title">การจัดการผู้ใช้งาน</h4>
-                      <p class="card-category">Complete your profile</p>
+              
                   </div>
                   <div class="card-body">
                       <form>
@@ -91,7 +91,7 @@
                       </a>
                   </div>
                   <div class="card-body">
-                      <h6 class="card-category text-gray">ผู้จัดการ</h6>
+                      <h6 class="card-category text-gray" style="font-family: 'Sarabun',sans-serif;">ผู้จัดการ</h6>
                       <h4 class="card-title">แอดมิน จอน</h4>
                       <p class="card-description">
                           รายละเอียด
