--- a/src/app/view/dashboard/dashboard.component.css
+++ b/src/app/view/dashboard/dashboard.component.css
@@ -1,6 +1,7 @@
 .dashboard {
     display: flex;
     flex-wrap: wrap;
+
   }
   
   .global-sales,
@@ -10,6 +11,9 @@
     flex: 1 1 45%; /* Adjust this as necessary */
     margin: 10px;
     font-family: 'Sarabun',sans-serif;
+  }
+  :host ::ng-deep .form-control{
+    background-image: linear-gradient(to top, #000000 2px, rgba(156, 39, 176, 0) 2px), linear-gradient(to top, #d2d2d2 1px, rgba(210, 210, 210, 0) 1px);
   }
 
   :host ::ng-deep .dataTables_wrapper .dataTables_paginate .paginate_button {
