--- a/src/app/view/profile/profile.component.css
+++ b/src/app/view/profile/profile.component.css
@@ -77,6 +77,9 @@
 ::placeholder{
   font-family: 'Sarabun',sans-serif;
 }
+:host ::ng-deep .form-control{
+  background-image: linear-gradient(to top, #000000 2px, rgba(156, 39, 176, 0) 2px), linear-gradient(to top, #d2d2d2 1px, rgba(210, 210, 210, 0) 1px);
+}
 :host ::ng-deep .btn-add{
   color: #fff;
   background-color: #24a0ed;/*#000dc2ef  */
