--- a/src/app/view/thaicounty/thaicounty.component.css
+++ b/src/app/view/thaicounty/thaicounty.component.css
@@ -5,7 +5,15 @@
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   bottom: -50px;
 }
+.card-header{
+  position: relative;
+  background-color: rgb(255, 209, 0);
+}
 
+.main-content{
+  height: 100%;
+  background-color: white !important;;
+}
 .card-header {
   font-size: 1.25rem;
   margin-bottom: 8px;
@@ -26,4 +34,7 @@ th, td {
   padding: 8px;
   text-align: left;
   border-bottom: 1px solid #ddd;
+}
+:host ::ng-deep .form-control{
+  background-image: linear-gradient(to top, #000000 2px, rgba(156, 39, 176, 0) 2px), linear-gradient(to top, #d2d2d2 1px, rgba(210, 210, 210, 0) 1px);
 }
